# RustMiniGames

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  clean_build.sh
.cargo/: config.toml
.circleci/: config.yml
configs/vscode/: RustMiniGames.code-workspace  launch.json
crates/test-lib/: test.h
crates/test-lib/src/: lib.rs
docker/: Dockerfile
hello_world/: hello.c  test_lib.h
src/cli/: CMakeLists.txt  cli_main.cpp
src/games/guess-number/: Cargo.toml
src/games/guess-number/src/: lib.rs
src/games/test-lib/: Cargo.toml
src/games/test-lib/src/: lib.rs
src/rumiga-core/: Cargo.toml
src/rumiga-core/src/: game_base.rs  lib.rs  player.rs  runner.rs
tools/cmake_rust/: CMakeCargo.cmake
